Changes in @NEW@:
  o Client Changes:
    * "conary help update" now works.
    * Added getUpdateItemList() method to allow retrieval of top level troves 
      on the local system. (CNY-1025)
    * --tags will now display whether source files are autosource or not.

  o Build Changes:
    * Files now have their refresh state reset after a commit
    * Committing trove on longer downloads autosourced files which haven't 
      changed (CNY-611, CNY-463)
    * Files can now be moved form autosource to standard inclusion using
      cvc add
    * Files which are cvc removed will now be switched to autosourced if
      appropriate (preserving the pathId)
    * The autosource state is stored explicitly in CONARY files
    * CONARY files now use textual identifiers for flags instead of digits
    * cvc refresh only downloads refreshed files now instead of all autosource
      files
    * Removing files doesn't readd them any longer simply because they were in
      the previous version and are present in the lookaside anymore (CNY-601)
    * Conary now warns in the presence of unknown use flags in the buildFlavor
      instead of erroring.  (It will still error if the unknown use flag
      is accessed in the recipe).

Changes in 1.0.37:
  o Bugfixes:
    * A warning message produced when attempting to retrieve a OpenPGP
      key has been fixed.  The warning was introduced in CNY-589.

Changes in 1.0.36:
  o Client Changes:
    * The usage message displayed when running "conary" or "cvc" has
      been simplified and improved. (CNY-560)
    * When choosing how to match up troves with the same name, conary now
      takes paths into account, if there's a choice to make between matching
      up two old troves that are otherwise equivalent with a new trove, conary
      will choose the one that shares paths with the new trove. (CNY-819)
    * Conary will now allow "conary migrate --info" and "conary migrate